Bug 250000 - Revision 1158057 leads to incorrect behaviour of tooltips
Summary: Revision 1158057 leads to incorrect behaviour of tooltips
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-03 13:37 UTC by Eugene Shalygin
Modified: 2010-09-04 15:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Eugene Shalygin 2010-09-03 13:37:38 UTC
Version:           unspecified
OS:                Linux

With mentioned patch Dolhin shows last succesfully retrieved preview image for
files without generated previews at the moment. Without the patch toltips
flicker a bit but preview images are correct. When correct previw for file becomes avaliable, it does not replace incorrect one in tooltip.

This is still not fixed in 4.5.1 but there is no such version in bugzilla.


Reproducible: Always

Steps to Reproduce:
1. remove cached thumbnails (rm  -fr ~/.thumbnails)
2. open dolphin
3. browse any directory with some files that should have a previews
4. point mouse on file with not generated preview

Actual Results:  
Last correct preview image will be showed instead of empty one

Expected Results:  
Empty preview that will be replaced with correct one as it becomes generated

http://bugs.gentoo.org/show_bug.cgi?id=333213
Comment 1 Dotan Cohen 2010-09-03 21:29:32 UTC
Not only is this bug #250000, but it was filed at a very 1337 hour!
Comment 2 Peter Penz 2010-09-03 21:59:28 UTC
Thanks for the report. I could reproduce to have a wrong preview after playing a few minutes and changing folders, but it was very tricky to reproduce. Do you probably have some more hints? E. g. on which file-types did you test this (PDFs, images, ...)? I guess it's a timing issue and related to how long the previews require to get generated...
Comment 3 Eugene Shalygin 2010-09-04 00:22:04 UTC
I found it with movies and mplayerthumbs, but after that I reproduced it with PDFs and images as well.
Concerning time I would say that when tooltip is showed, it already contains wrong image despite file type (JPG, movie, whatever) and it seems to be not depending on time. Only if Dolphin generates previews for files in just opened directory quicker than I'm able to hover file with mouse, then tooltips are correct.
Comment 4 Peter Penz 2010-09-04 15:15:02 UTC
SVN commit 1171568 by ppenz:

Fix issue that an old preview might be shown in a tooltip. Cool bug-id btw ;-)

BUG: 250000
FIXED-IN: 4.5.2



 M  +6 -0      tooltipmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171568
Comment 5 Peter Penz 2010-09-04 15:15:45 UTC
SVN commit 1171569 by ppenz:

Fix issue that an old preview might be shown in a tooltip. Cool bug-id btw ;-)

CCBUG: 250000
FIXED-IN: 4.5.2


 M  +6 -0      tooltipmanager.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1171569