Fix issue that an old preview might be shown in a tooltip. Cool bug-id btw ;-)

BUG: 250000
FIXED-IN: 4.5.2


svn path=/branches/KDE/4.5/kdebase/apps/; revision=1171568